# ai-agent-journey

./: .env.example  .gitignore  README.md  pyproject.toml
experiments/01-hello-three-providers/: README.md  hello.py
experiments/02-async-comparison/: README.md  async_compare.py  structured_output.py
notes/: questions.md
python-basics/: README.md
python-basics/day-01/: exercise.md
weekly/: week-01.md
