[project]
name = "ai-agent-journey"
version = "0.1.0"
description = "6-month learning journey to become an AI Agent engineer"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "google-genai>=0.3.0",
    "openai>=1.50.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.9.0",
    "rich>=13.9.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "ruff>=0.7.0",
    "ipython>=8.27.0",
    "jupyter>=1.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
